# icp-toolchain

./: .gitignore  README.md  TODO.txt  pyproject.toml  test_nodeinfo_update.py
.mccp_config/: mccp_api_info.json  mccp_config.json  mccp_dir_content.json
docs/: intent_behavior_code.md
src_main/: MainEntry.py  main.py  main_cmd.py  main_ui.py  run_tests.py  test_refactor.py
src_main/_dev_temp/: 专注.md
src_main/_script_for_func_test/: AST_PERSISTENCE_README.txt  example_ast_usage.py  test_ast_data_manager.py  test_ast_output.json  test_ast_persistence.py  test_backslash_continuation_extra.py  test_constructor_validation.py  test_continuation_colon.py  test_dir_json_funcs.py  test_embedding_handler.py  test_external_lib_skip.py  test_ibc_continuation_lines.py  test_ibc_data_store.py  test_ibc_funcs_lib1.py  test_ibc_funcs_lib2.py  test_ibc_lexer.py  test_ibc_parser.py  test_ibc_symbol_gen.py  test_ibc_symbol_ref.py  test_ibc_symbols.py  test_ibc_symbols_ref_resolver.py  test_icb_analyzer.py  test_local_symbol_merge.py  test_local_symbol_reference.py  test_module_path.py  test_ref_resolver.py  test_symbol_persistence.py  test_symbol_replacement.py  test_symbol_types.py  user_management_ast.json
src_main/app/: cmd_interface.py  icp_cmd_cli.py  sys_prompt_manager.py  thread_state_machine.py  user_prompt_manager.py
src_main/app_data/: app_data.json
src_main/cfg/: MccpConfigManager.py  ui_comm_inst.py  (+5 more)
src_mcbc/: ui.mcbc
temp/: tmp.json  tmp_jiaofu.md  tmp_mcbc.md  tmp_mcpc.md  tmp_symbols_json.md  tmp_target_python.md
template_proj/: README.md  requirements.md
(+226 files in other folders)
